renamed my cell

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<h1>Header</h1>
 	<table>
 		<tr>
-			<td>cell</td>
-			<td>cell 2</td>
+			<td>my cell</td>
+			<td>my cell 2</td>
 		</tr>
 	</table>
 </body>
