--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<h1>better header</h1>
 	<table>
 		<tr>
-			<td>my cell</td>
+			<td>my cell 1</td>
 			<td>my cell 2</td>
 			<td>my cell 3</td>
 		</tr>
